0.14.6 (#15)
* use libchdr instead of aaru

* use jpl instead of jul

* follow ide advices

* update settings

* bump version