@@ -7,13 +7,16 @@
 package vavi.nio.file.du;
 
 import java.io.IOException;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
-import java.util.logging.Level;
 
 import com.github.fge.filesystem.provider.FileSystemProviderBase;
-import vavi.util.Debug;
+
+import static java.lang.System.getLogger;
 
 
 /**
@@ -24,6 +27,8 @@ import vavi.util.Debug;
  */
 public final class DuFileSystemProvider extends FileSystemProviderBase {
 
+    private static final Logger logger = getLogger(DuFileSystemProvider.class.getName());
+
     public DuFileSystemProvider() {
         super(new DuFileSystemRepository());
     }
@@ -33,11 +38,11 @@ public final class DuFileSystemProvider extends FileSystemProviderBase {
      * TODO consider more
      */
     public static URI createURI(String path) throws IOException {
-        String url = URLEncoder.encode(Paths.get(path).toAbsolutePath().toString(), "utf-8");
+        String url = URLEncoder.encode(Paths.get(path).toAbsolutePath().toString(), StandardCharsets.UTF_8);
         url = url.replace("%2F", "/");
         url = url.replace("+", "%20");
         URI uri = URI.create("discutils:file:" + url);
-Debug.println(Level.FINE, "uri: " + uri);
+logger.log(Level.DEBUG, "uri: " + uri);
         return uri;
     }
 }
